Fix GitHub button z-index bug #458

--- a/docs/src/scss/docs.scss
+++ b/docs/src/scss/docs.scss
@@ -117,7 +117,7 @@
     @supports (position: sticky) {
       position: sticky;
       top: 0;
-      z-index: $zindex-1;
+      z-index: $zindex-1 - 1;
 
       &::before {
         background: $light-color;      
